--- a/src/index.css
+++ b/src/index.css
@@ -13,11 +13,11 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-a {
+/* a {
   font-weight: 500;
   color: black;
   text-decoration: inherit;
-}
+} */
 /* a:hover {
   color: #535bf2;
 } */
@@ -29,7 +29,10 @@ a {
   min-width: 320px;
   min-height: 100vh;
 } */
-
+ul,
+ol {
+  list-style: none;
+}
 h1 {
   font-size: 3.2em;
   line-height: 1.1;
